RESOLVED FIXED89533
Refactoring: Geolocation::startRequest() should not create the GeoNotifiers
https://bugs.webkit.org/show_bug.cgi?id=89533
Summary Refactoring: Geolocation::startRequest() should not create the GeoNotifiers
Benjamin Poulain
Reported 2012-06-19 17:12:50 PDT
Refactoring: Geolocation::startRequest() should not create the GeoNotifiers
Attachments
Patch (4.47 KB, patch)
2012-06-19 17:20 PDT, Benjamin Poulain
ddkilzer: review+
Benjamin Poulain
Comment 1 2012-06-19 17:20:25 PDT
David Kilzer (:ddkilzer)
Comment 2 2012-06-19 21:53:07 PDT
Comment on attachment 148467 [details] Patch r=me
Benjamin Poulain
Comment 3 2012-06-19 23:04:02 PDT
Note You need to log in before you can comment on or make changes to this bug.