Refactoring: Geolocation::startRequest() should not create the GeoNotifiers https://bugs.webkit.org/show_bug.cgi?id=89533

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-06-19
Reviewed by David Kilzer.

It was odd to create the GeoNotifiers in Geolocation::startRequest() and having
assertions from the call site.

This patch move GeoNotifiers initialization to the exposed methods and pass them to
startRequest() as needed.
This will also help when adding support for dynamic permission reset and suspend/resume.

* Modules/geolocation/Geolocation.cpp:
(WebCore::Geolocation::getCurrentPosition):
(WebCore::Geolocation::watchPosition):
(WebCore::Geolocation::startRequest):
* Modules/geolocation/Geolocation.h:
(Geolocation):


Canonical link: https://commits.webkit.org/107406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120804 268f45cc-cd09-0410-ab3c-d52691b4dbfc